--- a/lib/gits_web/controllers/email_html/order_completed.html.heex
+++ b/lib/gits_web/controllers/email_html/order_completed.html.heex
@@ -76,7 +76,7 @@
                       <div style="display: grid; gap: 4px">
                         <dt style="font-weight: 500; color: #4b5563">Event</dt>
                         <dd style="margin: 0; color: #6b7280">
-                          <%= @event_name %>
+                          {@event_name}
                         </dd>
                       </div>
                       <div style="display: grid; gap: 4px">
@@ -87,8 +87,8 @@
                             style="padding-top: 8px; padding-bottom: 8px"
                           >
                             <div style="display: flex; justify-content: space-between">
-                              <span><%= count %> &times; <%= name %></span>
-                              <span style="font-weight: 500; color: #27272a">R <%= price %></span>
+                              <span>{count} &times; {name}</span>
+                              <span style="font-weight: 500; color: #27272a">R {price}</span>
                             </div>
                           </div>
                         </dd>
@@ -96,7 +96,7 @@
                     </dl>
                     <div style="display: grid; text-align: right">
                       <span>Total payment</span>
-                      <span style="font-size: 24px; font-weight: 500">R <%= @total %></span>
+                      <span style="font-size: 24px; font-weight: 500">R {@total}</span>
                     </div>
                   </td>
                 </tr>
@@ -106,7 +106,7 @@
                   <td style="display: flex; gap: 24px; padding-top: 40px">
                     <div>
                       <a
-                        href={url(GitsWeb.Endpoint, ~p"/my/tickets?order_no=#{@order_no}")}
+                        href={url(GitsWeb.Endpoint, ~p"/my/tickets?order=#{@order_id}")}
                         style="margin: 0 0 24px; display: inline-block; border-radius: 8px; background-color: #09090b; padding: 8px 16px; font-size: 14px; font-weight: 600; color: #fafafa; text-decoration: none"
                         class="hover-bg-zinc-800"
                       >
@@ -123,7 +123,7 @@
                     </div>
                     <div>
                       <a
-                        href={url(GitsWeb.Endpoint, ~p"/refund?order_no=#{@order_no}")}
+                        href={url(GitsWeb.Endpoint, ~p"/refund?order=#{@order_id}")}
                         style="margin: 0 0 24px; display: inline-block; border-radius: 8px; background-color: #fafafa; padding: 8px 16px; font-size: 14px; font-weight: 600; color: #09090b; text-decoration: none"
                         class="hover-bg-zinc-100"
                       >
