--- a/lib/gits_web/live/host_live/edit_event_templates/summary.html.heex
+++ b/lib/gits_web/live/host_live/edit_event_templates/summary.html.heex
@@ -1,30 +1,15 @@
 <h2 class="text-lg/7 font-semibold text-gray-900">Summary</h2>
-<p class="mt-1 mb-4 text-sm/5 text-gray-600">
-  Money from tickets sold will be deposited into the recipient's bank account.
-</p>
+<p class="mt-1 mb-4 text-sm/5 text-gray-600"></p>
 
-<.form
-  :let={f}
-  id="create-event-form"
-  for={@form}
-  class="grid gap-6"
-  phx-submit="details"
-  phx-change="validate"
-  phx-auto-recover="validate"
->
-  <div class="grid max-w-screen-sm grid-cols-2 gap-6">
-    <.input
-      field={f[:payout_recipient]}
-      prompt="No recipient selected"
-      options={[]}
-      label="Payout recipient"
-      placeholder="e.g. The Ultimate Cheese Festival"
-      type="select"
-      class="col-span-full"
-    >
-      <.button href={@new_recipient_path} size={:none} variant={:ghost}>
-        <span>Create a new recipient &rarr;</span>
-      </.button>
-    </.input>
+<div class="grid gap-8 max-w-screen-sm">
+  <div class="text-sm/6 flex border p-4 gap-4 rounded-xl">
+    <.icon name="i-lucide-triangle-alert" class="text-orange-500 mt-1" />
+    <div class="grid grow">
+      <span class="font-medium">Payout details required!</span>
+      <span></span>
+    </div>
+    <.button size={:none} href={@host_settings_payouts_path} variant={:ghost}>
+      <span>Update payout details &rarr;</span>
+    </.button>
   </div>
-</.form>
+</div>
