--- a/lib/gits_web/live/storefront_live/event_order.html.heex
+++ b/lib/gits_web/live/storefront_live/event_order.html.heex
@@ -17,10 +17,10 @@
           class="grid gap-4 rounded-xl border p-6"
         >
           <div class="flex justify-between font-semibold">
-            <span><%= name %></span>
-            <span>R <%= price %></span>
+            <span>{name}</span>
+            <span>R {price}</span>
           </div>
-          <span class="line-clamp-3 text-sm text-zinc-500"><%= description %></span>
+          <span class="line-clamp-3 text-sm text-zinc-500">{description}</span>
           <div class="flex items-center gap-2">
             <div class="grow"></div>
 
@@ -46,7 +46,7 @@
             </.form>
 
             <span class="w-6 text-center text-lg font-medium tabular-nums">
-              <%= count %>
+              {count}
             </span>
             <.form :let={f} for={add_ticket_form} phx-submit="add_ticket">
               <.inputs_for :let={ticket_form} field={f[:ticket]}>
@@ -67,6 +67,7 @@
         for={@process_form}
         class="sticky bottom-0 top-0 z-20 grid items-center gap-4 border-t border-zinc-100 bg-white p-2 shadow-sm lg:bottom-auto lg:top-6 lg:border-none lg:shadow-none"
       >
+        <.input type="hidden" field={f[:total]} value={@tickets_total} />
         <div class="flex">
           <.button disabled={Enum.empty?(@tickets)}>
             <span>Continue</span>
@@ -87,7 +88,7 @@
       </div>
 
       <p class=" text-sm text-zinc-700">
-        Please provide your email address to receive your order confirmation for the <%= @event.name %> tickets. We'll send you important details about your purchase and how to access your tickets.
+        Please provide your email address to receive your order confirmation for the {@event.name} tickets. We'll send you important details about your purchase and how to access your tickets.
       </p>
     <% end %>
 
@@ -104,6 +105,20 @@
         Your order has been placed successfully. We've also sent a confirmation email with these details to your email address.
       </p>
     <% end %>
+
+    <%= if @order.state == :confirmed do %>
+      <div class="flex items-center gap-4">
+        <.button size={:none} class="p-2" onclick="history.back()" variant={:outline}>
+          <.icon name="i-lucide-chevron-left" />
+        </.button>
+
+        <h3 class="text-lg font-semibold lg:col-span-full">Order Confirmed</h3>
+      </div>
+
+      <p class=" text-sm text-zinc-700">
+        Your order has been confirmed. You will shortly be redirected to a payment page. If you are not redirected, please use this link to continue to payments
+      </p>
+    <% end %>
   </div>
 
   <div class="p-2">
@@ -113,14 +128,14 @@
         <div :if={@order.email} class="grid gap-1">
           <dt class="font-medium text-gray-600">Customer</dt>
           <dd class="text-zinc-500">
-            john.doe@bar.com
+            {@order.email}
           </dd>
         </div>
 
         <div class="grid gap-1">
           <dt class="font-medium text-gray-600">Event</dt>
           <dd class="text-gray-500">
-            <%= @event.name %>
+            {@event.name}
           </dd>
         </div>
 
@@ -130,8 +145,8 @@
             <dd class="divide-y text-gray-500">
               <div :for={{name, price, count} <- @tickets_summary} class="py-2">
                 <div class="flex justify-between">
-                  <span><%= count %> &times; <%= name %></span>
-                  <span class="font-medium text-zinc-800">R <%= price %></span>
+                  <span>{count} &times; {name}</span>
+                  <span class="font-medium text-zinc-800">R {price}</span>
                 </div>
               </div>
             </dd>
@@ -141,14 +156,26 @@
 
       <div class="grid text-right">
         <span>Total payment</span>
-        <span class="text-2xl font-medium">R <%= @tickets_total %></span>
+        <span class="text-2xl font-medium">
+          R
+          <%= if Enum.member?([:processed, :confirmed], @order.state) do %>
+            {@order.total}
+          <% else %>
+            {@tickets_total}
+          <% end %>
+        </span>
       </div>
     </div>
   </div>
 
   <%= if @order.state == :processed do %>
     <.form :let={f} phx-submit="confirm" for={@confirm_form} class="grid  items-center gap-4 p-2">
-      <.input field={f[:email]} type="email" label="Email address" />
+      <.input
+        field={f[:email]}
+        type={if @current_user, do: "hidden", else: "email"}
+        value={if @current_user, do: @current_user.email, else: nil}
+        label="Email address"
+      />
       <div class="flex">
         <.button>
           <span>Confirm Order</span>
@@ -159,11 +186,11 @@
 
   <%= if @order.state == :completed do %>
     <div class="flex gap-4 p-2">
-      <.button phx-click={JS.navigate(~p"/my/tickets?order_no=#{@order.number}")}>
+      <.button phx-click={JS.navigate(~p"/my/tickets?order=#{@order.id}")}>
         <span>View tickets</span>
       </.button>
 
-      <.button phx-click={JS.navigate(~p"/refund?order_no=#{@order.number}")} variant={:subtle}>
+      <.button phx-click={JS.navigate(~p"/refund?order=#{@order.id}")} variant={:subtle}>
         <span>Return tickets</span>
       </.button>
     </div>
