--- a/lib/gits_web/live/ticket_live.html.heex
+++ b/lib/gits_web/live/ticket_live.html.heex
@@ -1,48 +1,26 @@
-<div class="mx-auto flex max-w-screen-xl items-center justify-between p-2">
+<div class="mx-auto flex max-w-screen-xl items-center justify-between p-2 pb-8">
   <.button variant={:ghost} phx-click={JS.navigate(~p"/my/tickets")}>
     <.icon name="i-lucide-chevron-left" />
     <span>Tickets</span>
   </.button>
-
-  <span class="pr-4 font-medium lg:pr-6">#<%= @ticket.public_id %></span>
-</div>
-
-<div :if={false}>
-  <.button size={:none} variant={:subtle} class="p-2">
-    <.icon name="i-lucide-pen-line" />
-  </.button>
 </div>
 
 <div class="mx-auto grid max-w-screen-xl items-start lg:grid-cols-6">
-  <div class="px-4 lg:col-span-2">
+  <div class="px-4 lg:col-span-2 space-y-4">
+    <div class="border rounded-xl">
+      <GitsWeb.EventComponents.ticket_card
+        ticket_name={@ticket.ticket_type.name}
+        id={@ticket.public_id}
+      />
+    </div>
+
     <div class="lg:col-start-3 lg:row-end-1">
-      <h2 class="sr-only">Summary</h2>
       <div class="rounded-lg bg-gray-50 ring-1 ring-gray-900/5">
-        <dl class="flex flex-wrap">
-          <div class="flex-auto pl-6 pt-6">
-            <dt class="text-sm/6 font-semibold text-gray-900">
-              <%= @ticket.ticket_type.event.name %>
-            </dt>
-            <dd class="mt-1 text-base font-semibold text-gray-900">
-              <%= @ticket.ticket_type.name %>
-            </dd>
+        <dl class="flex gap-4 px-6 py-4 flex-wrap">
+          <div class="text-sm/6 font-semibold text-gray-900">
+            {@ticket.ticket_type.event.name}
           </div>
-          <div class="flex-none self-end px-6 pt-4">
-            <dt class="sr-only">Status</dt>
-            <dd class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">
-              Active
-            </dd>
-          </div>
-          <div class="mt-6 flex w-full flex-none gap-x-4 border-t border-gray-900/5 px-6 pt-6">
-            <%= if false do %>
-              <dt class="flex-none">
-                <span class="sr-only">Client</span>
-                <.icon name="i-lucide-circle-user" class="text-zinc-400 mt-0.5" />
-              </dt>
-              <dd class="text-sm/6 font-medium text-gray-900">Alex Curren</dd>
-            <% end %>
-          </div>
-          <div class="mt-4 flex w-full flex-none gap-x-4 px-6">
+          <div class="flex w-full flex-none gap-x-4">
             <dt class="flex-none">
               <span class="sr-only">Due date</span>
               <.icon name="i-lucide-calendar-range" class="text-zinc-400 mt-0.5" />
@@ -51,7 +29,7 @@
               <time datetime="2023-01-31"> 31 September 2023 at 05:30 AM</time>
             </dd>
           </div>
-          <div class="mt-4 flex w-full flex-none gap-x-4 px-6">
+          <div class="flex w-full flex-none gap-x-4">
             <dt class="flex-none">
               <span class="sr-only">Status</span>
               <.icon name="i-lucide-map-pin" class="text-zinc-400 mt-0.5" />
@@ -61,16 +39,11 @@
             </dd>
           </div>
         </dl>
-        <div class="mt-6 border-t border-gray-900/5 px-6 py-6">
-          <a :if={false} href="#" class="text-sm/6 font-semibold text-gray-900">
-            Download receipt <span aria-hidden="true">&rarr;</span>
-          </a>
-        </div>
       </div>
     </div>
   </div>
   <div class="w-full max-w-80 place-self-center lg:place-self-end py-8 lg:col-start-5 lg:col-end-7 lg:p-0">
-    <%= raw(
+    {raw(
       url(GitsWeb.Endpoint, ~p"/t/#{@ticket.public_id}")
       |> EQRCode.encode()
       |> EQRCode.svg(
@@ -80,6 +53,6 @@
         background_color: :transparent,
         width: 360
       )
-    ) %>
+    )}
   </div>
 </div>
