feat: simplify relationships and improve code clarity
- consolidate `belongs_to` relationship definitions in
  `gits.accounts.host` and `gits.accounts.role` modules.
- remove unused `gits.accounts.hostmember` module to reduce clutter.
- enhance `gits.accounts.roletype` with detailed descriptions for
  role values to improve maintainability.
- update `gits.accounts.user.senders.sendmagiclinkemail` to handle
  errors more explicitly.
- refactor various components in `gitsweb` to use curly braces for
  variable interpolation, improving readability.
- set default values for `quantity` and `limit_per_user` in
  `gits.storefront.tickettype` to ensure consistent behavior.
- remove deprecated migration files to clean up the repository.

--- a/lib/gits_web/controllers/page_html/host.html.heex
+++ b/lib/gits_web/controllers/page_html/host.html.heex
@@ -37,7 +37,7 @@
     </div>
   </dl>
 
-  <%= live_render(@conn, GitsWeb.DemoPricingCalculator) %>
+  {live_render(@conn, GitsWeb.DemoPricingCalculator)}
 
   <div class="grid w-full gap-y-6 lg:flex lg:items-center lg:justify-between">
     <h2 class="w-full text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
