--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -74,7 +74,7 @@
         </span>
         <div class="flex w-full items-center gap-3 rounded-lg px-2 py-4 group-hover:bg-zinc-50 group-[.is-active]:bg-zinc-100 group-[.is-active]:text-zinc-950 lg:py-2">
           <.icon name={i.icon} class="size-5 shrink-0" />
-          <span class="text-sm font-semibold"><%= i.label %></span>
+          <span class="text-sm font-semibold">{i.label}</span>
         </div>
       </.link>
     </nav>
@@ -130,7 +130,7 @@
           <div class="px-4 py-3" role="none">
             <p class="text-sm" role="none">Signed in as</p>
             <p class="truncate text-sm font-medium text-zinc-900" role="none">
-              <%= @current_user.email %>
+              {@current_user.email}
             </p>
           </div>
           <div :for={{items, outer_index} <- Enum.with_index(menus)} class="py-1" role="none">
@@ -142,12 +142,12 @@
               tabindex="-1"
               id={"menu-item-#{outer_index}-#{index}"}
             >
-              <span><%= name %></span>
+              <span>{name}</span>
               <span
                 :if={badge}
                 class="inline-flex items-center gap-x-1.5 rounded-md bg-white px-2 py-1 text-xs font-medium text-gray-900 ring-1 ring-inset ring-gray-200"
               >
-                <%= badge %>
+                {badge}
               </span>
             </.link>
           </div>
@@ -155,6 +155,6 @@
       </div>
     </div>
 
-    <%= @inner_content %>
+    {@inner_content}
   </main>
 </div>
