--- a/lib/gits_web/controllers/auth_html/sign_in.html.heex
+++ b/lib/gits_web/controllers/auth_html/sign_in.html.heex
@@ -1,4 +1,4 @@
-<.header muted={true} />
+<.header user={@current_user} />
 <div class="mx-auto min-h-[calc(100dvh-theme(space.16))] w-full max-w-sm rounded-xl p-4 pt-40 lg:px-8">
-  <%= live_render(@conn, GitsWeb.AuthLive) %>
+  {live_render(@conn, GitsWeb.AuthLive)}
 </div>
