--- a/lib/gits_web/live/host_live/edit_event.html.heex
+++ b/lib/gits_web/live/host_live/edit_event.html.heex
@@ -10,9 +10,7 @@
   <div
     :for={
       {label, action} <- [
-        {"Event Details", :details},
-        {"Tickets", :tickets},
-        {"Summary", :summary}
+        {"Event Details", :details}
       ]
     }
     class="group grid w-full max-w-40"
@@ -22,7 +20,7 @@
       <div class="h-1.5 rounded-full bg-zinc-200 group-aria-selected:bg-zinc-800"></div>
     </div>
     <div class="inset-x-0 top-4 hidden text-zinc-400 group-aria-selected:text-zinc-950 lg:inline-flex">
-      <span class="text-sm font-semibold"><%= label %></span>
+      <span class="text-sm font-semibold">{label}</span>
     </div>
   </div>
 </div>
@@ -46,6 +44,7 @@
     <.summary
       :if={@live_action == :summary}
       host_settings_payouts_path={Routes.host_settings_path(@socket, :payouts, @host.handle)}
+      payout_details_required={false}
     />
 
     <div class="mt-8 flex gap-6">
@@ -62,12 +61,11 @@
         </span>
       </.button>
 
-      <%= if @live_action == :summary do %>
-        <.button phx-click={JS.dispatch("gits:go_back")} type="button">
+      <%= if @live_action == :details do %>
+        <.button variant={:subtle} phx-click={JS.dispatch("gits:go_back")} type="button">
           <span>
-            Publish
+            Done
           </span>
-          <.icon name="i-lucide-rocket" />
         </.button>
       <% else %>
         <.button phx-click="next" type="button" variant={:subtle}>
