--- a/lib/gits_web/live/host_live/onboarding.html.heex
+++ b/lib/gits_web/live/host_live/onboarding.html.heex
@@ -3,7 +3,7 @@
   <p class="mt-4 text-zinc-500">
     A host account will make it easy to manage events, venues and everything else to make you a successful host
   </p>
-  <.form :let={f} for={@form} phx-submit="save">
+  <.form :let={f} id="host-form" for={@form} phx-submit="save" phx-change="validate">
     <div class="grid grid-cols-[auto_1fr] mt-8 items-center gap-1 gap-x-4">
       <span class="col-span-full w-full text-sm font-medium">Upload your logo</span>
       <div class="size-24 overflow-hidden rounded-xl bg-zinc-200">
@@ -19,6 +19,7 @@
       <div class="inline-grid gap-4">
         <label class="inline-flex">
           <span class="sr-only">Choose logo</span>
+
           <.live_file_input
             upload={@uploads.logo}
             class="w-full text-sm font-medium file:mr-4 file:h-9 file:rounded-lg file:border file:border-solid file:border-zinc-300 file:bg-white file:px-4 file:py-2 hover:file:bg-zinc-50"
@@ -28,6 +29,9 @@
           .png, .jpeg, .gif files up to 2MB. Recommended size is 256x256
         </span>
       </div>
+      <p :for={err <- upload_errors(@uploads.logo)} class="alert alert-danger">
+        {error_to_string(err)}
+      </p>
     </div>
 
     <.input field={f[:name]} label="Host name" class="mt-8 col-span-full" />
